[package]
name = "indicator_engine"
version = "0.1.0"
edition = "2021"
default-run = "indicator_engine"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
lapin = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
log = "0.4"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
urlencoding = "2"
flate2 = "1.0"
market_data_ingestor = { path = "../market_data_ingestor" }
